# HyperXTalk-mcp

./: README.md
bridge/: build-plugin.livecodescript  hxt-mcp-bridge.livecodescript
server/: mcp_server.py  pyproject.toml
server/hyperxtalk_mcp/: __init__.py  __main__.py  bridge_client.py  dictionary.py  errors.py  handles.py  script_handlers.py  server.py
server/tests/: test_client_mock.py  test_dictionary.py  test_handles.py  test_handshake.py  test_integration.py  test_normalize.py  test_script_handlers.py  test_smoke.py
