[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperxtalk-mcp"
version = "0.0.1"
description = "MCP server bridging AI agents to live HyperXTalk stacks"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[project.scripts]
hyperxtalk-mcp = "hyperxtalk_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["hyperxtalk_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: talks to a live HyperXTalk bridge (auto-skips if none running)"]
